# nativefier

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  install.sh  readme.md
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml  Web.toml  build.rs
gui/src/: main.rs
gui/src/ui/: index.html  package.json
gui/src/ui/public/: index.html
gui/src/ui/src/: App.js  index.js
nativefier/: Cargo.toml  build.rs
nativefier/src/: bundle.rs  cli.rs  infer.rs  lib.rs  ui.rs
res/: Info.plist  launch.bat  launch.sh
src/: bundle.rs  cli.rs  error.rs  infer.rs  main.rs  ui.rs
src/ui/: app.js  cash.min.js  index.html  polyfill.js  style.css
webview/: Cargo.toml
webview/src/: main.rs
