[package]
name = "nativefier"
version = "0.1.0"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
web-view = { git = "https://github.com/Boscop/web-view.git" }
handlebars = { git = "https://github.com/sunng87/handlebars-rust.git" }
clap = "2.32.0"
serde_json = "1.0.33"
reqwest = "0.9.5"
scraper = "0.9.0"
url = "1.7.2"
hyper = "0.12"
chrono = "0.4.*"
mime-sniffer = "0.1.2"
mime = "0.3.12"
image = "*"
tempfile = "3"
log = "0.4"
pretty_env_logger = "0.3"

[build-dependencies]
winres = "0.1"
image = "*"