[package]
name = "nativefier"
version = "0.1.0"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
web-view = "0.4.0"
handlebars = "1.1"
clap = "2.32.0"
serde_json = "1.0.33"
reqwest = "0.9.5"
scraper = "0.9.0"
url = "1.7.2"
hyper = "0.12"
image = "0.20"
log = "0.4"
pretty_env_logger = "0.3"

[build-dependencies]
winres = "0.1"
image = "*"