[package]
name = "nativefier"
version = "0.2.0"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.20"
scraper = "0.10.1"
url = "2.1.0"
hyper = "0.12.33"
image = "0.22.1"
log = "0.4.8"
pretty_env_logger = "0.3.1"

[dependencies.icns]
git = "https://github.com/JackMordaunt/icns-rs.git"
branch = "master"
